syntax = "proto3";

package interceptorpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/blockchainpb/interceptorpb";

import "blockchainpb/blockchainpb.proto";
import "mir/codegen_extensions.proto";

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    TreeUpdate      tree_update     = 1;
    NewOrphan       new_orphan      = 2;
    AppUpdate       app_update      = 3;
  }
}

message TreeUpdate {
    option (mir.event) = true;

    blockchainpb.Blocktree  tree    = 1;
    uint64                  head_id = 2;
}

message NewOrphan {
    option (mir.event) = true;
    
    blockchainpb.Block orphan = 1;
}

message AppUpdate {
    option (mir.event) = true;

    int64   state     = 1;
}